[package]
name = "lazy_diamond_square"
version = "0.1.0"
edition = "2021"
authors = ["Priz01 <vlaula27_priz01@vk.com>"]
repository = "https://github.com/killercup/hsl-rs.git"
homepage = "https://github.com/killercup/hsl-rs.git"
license = "MIT OR Apache-2.0"
readme = "README.md"
description = "Lazy and fast implementation of the diamond-square without randomness"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tinyrand = "0.5.0"
tinyrand-std = "0.5.0"
seahash = "4.1.0"
