[package]
name = "lazy_diamond_square"
version = "1.1.0"
edition = "2021"
authors = ["Priz01 <vlaula27_priz01@vk.com>"]
repository = "https://github.com/Priz01/lazy_diamond_square/"
homepage = "https://github.com/Priz01/lazy_diamond_square/"
license = "MIT OR Apache-2.0"
readme = "../README.md"
description = "Lazy implementation of the diamond-square without randomness"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tinyrand = "0.5"
tinyrand-std = "0.5"
seahash = "4"

image = { version = "0.25", optional = true }

[features]
simple_viewing = ["dep:image"]
