[package]
name = "lds_simple_view"
version = "0.1.1"
edition = "2021"
authors = ["Priz01 <vlaula27_priz01@vk.com>"]
repository = "https://github.com/Priz01/lazy_diamond_square/"
homepage = "https://github.com/Priz01/lazy_diamond_square/"
license = "MIT OR Apache-2.0"
description = "This crate is OBSOLETE. USE gen_img method INSTEAD! A simple way to view the contents of a HeightMap structure from a lazy_diamond_square"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24"
lazy_diamond_square = "0.1"
